updating style. seeing if position sticky fixed on mobile for chart one

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -14,7 +14,7 @@ input {
 }
 body {
   width: 100%;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   position: relative;
 }
 
